force-app/main/default/objects/XactlyExpress__XCPayoutResult__c/XactlyExpress__XCPayoutResult__c.object-meta.xml
<CustomObject>
    <label>XCPayoutResult</label>
    <nameField>
        <label>XCPayoutResult Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XCPayoutResult</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>