force-app/main/default/objects/XactlyExpress__XCPayoutResult__c/fields/XactlyExpress__DrawBalance__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__DrawBalance__c</fullName>
    <label>DrawBalance</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>