force-app/main/default/objects/XactlyExpress__XCPayoutResult__c/fields/XactlyExpress__DrawBalanceAdjustment__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__DrawBalanceAdjustment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DrawBalanceAdjustment</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>