force-app/main/default/objects/XactlyExpress__XCPayoutResult__c/fields/XactlyExpress__DrawRuleDetailID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__DrawRuleDetailID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DrawRuleDetailID</label>
    <referenceTo>XactlyExpress__XCDrawRuleDetail__c</referenceTo>
    <relationshipLabel>XCPayoutResult</relationshipLabel>
    <relationshipName>XCPayoutResult</relationshipName>
    <type>Lookup</type>
</CustomField>