force-app/main/default/objects/XactlyExpress__XCPayoutResult__c/fields/XactlyExpress__EarnedAmountSum__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__EarnedAmountSum__c</fullName>
    <label>EarnedAmountSum</label>
    <summarizedField>XactlyExpress__XCPayoutDetail__c.XactlyExpress__EarnedAmount__c</summarizedField>
    <summaryForeignKey>XactlyExpress__XCPayoutDetail__c.XactlyExpress__PayoutResultID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>