force-app/main/default/objects/XactlyExpress__XCPayoutResult__c/fields/XactlyExpress__HoldBalanceSum__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__HoldBalanceSum__c</fullName>
    <label>HoldBalanceSum</label>
    <summarizedField>XactlyExpress__XCPayoutDetail__c.XactlyExpress__HoldBalance__c</summarizedField>
    <summaryForeignKey>XactlyExpress__XCPayoutDetail__c.XactlyExpress__PayoutResultID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>