force-app/main/default/objects/XactlyExpress__XCPayoutResult__c/fields/XactlyExpress__LiabilityID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__LiabilityID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LiabilityID</label>
    <referenceTo>XactlyExpress__XCLiability__c</referenceTo>
    <relationshipLabel>XCPayoutResult</relationshipLabel>
    <relationshipName>XCPayoutResult</relationshipName>
    <type>Lookup</type>
</CustomField>