force-app/main/default/objects/XactlyExpress__XCPayoutResult__c/fields/XactlyExpress__ManualAdjustment__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ManualAdjustment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ManualAdjustment</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>