force-app/main/default/objects/XactlyExpress__XCPayoutResult__c/fields/XactlyExpress__PaidAmountSum__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__PaidAmountSum__c</fullName>
    <label>PaidAmountSum</label>
    <summarizedField>XactlyExpress__XCPayoutDetail__c.XactlyExpress__PaidAmount__c</summarizedField>
    <summaryForeignKey>XactlyExpress__XCPayoutDetail__c.XactlyExpress__PayoutResultID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>