force-app/main/default/objects/XactlyExpress__XCPayoutResult__c/fields/XactlyExpress__ProfileID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ProfileID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProfileID</label>
    <referenceTo>XactlyExpress__XCProfile__c</referenceTo>
    <relationshipName>XCPayoutResult</relationshipName>
    <type>Lookup</type>
</CustomField>