force-app/main/default/objects/XactlyExpress__XCPayoutResult__c/fields/XactlyExpress__TotalDrawRecoverAmount__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__TotalDrawRecoverAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TotalDrawRecoverAmount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>