force-app/main/default/objects/XactlyExpress__XCPayoutResult__c/validationRules/XactlyExpress__DrawBalancePositive.validationRule-meta.xml
<ValidationRule>
    <fullName>XactlyExpress__DrawBalancePositive</fullName>
    <active>true</active>
    <errorConditionFormula>XactlyExpress__DrawBalance__c &lt; 0</errorConditionFormula>
    <errorMessage>Draw balance cannot be negative.</errorMessage>
</ValidationRule>