force-app/main/default/objects/XactlyExpress__XCPayoutResult__c/validationRules/XactlyExpress__TotalPaymentPositive.validationRule-meta.xml
<ValidationRule>
    <fullName>XactlyExpress__TotalPaymentPositive</fullName>
    <active>true</active>
    <errorConditionFormula>XactlyExpress__TotalPayment__c &lt; 0</errorConditionFormula>
    <errorMessage>Total payment cannot be negative.</errorMessage>
</ValidationRule>