force-app/main/default/objects/XactlyExpress__XCPayoutResult__c/validationRules/XactlyExpress__TotalRecoverPositive.validationRule-meta.xml
<ValidationRule>
    <fullName>XactlyExpress__TotalRecoverPositive</fullName>
    <active>true</active>
    <errorConditionFormula>XactlyExpress__TotalDrawRecoverAmount__c &lt; 0</errorConditionFormula>
    <errorMessage>Total draw recover cannot be negative.</errorMessage>
</ValidationRule>